Fixes icons not showing in searchbar...
Reverts to text not being able to be in an icon. This had to
happen anyway - as it currently was, text could only be there if
it was last. There was no way to choose to use text in the middle.
A possible option is to have one choice box wich contains the text
being written, so it can be chosen as the contenst.
Issues:
- Width - what if the text width is wider than that of the image-
choice container?
- How to insert it and differentiate it from regular text as far
as the program goes?
Should probably write up an issue for this

--- a/css/iconocode-testing.css
+++ b/css/iconocode-testing.css
@@ -291,11 +291,13 @@ but maybe we want the images to be their proper size?
     height: 1.3rem;
 }
 
-/*.icd .image-choice svg * {
-	stroke: rgb(153, 153, 153) !important;
-	fill: rgb(153, 153, 153) !important;
-}*/
+/* --- SIZE CHOICES BETTER --- */
+/*.choice-part {
+	height: 0.7rem;*/  /* Kind of tiny, but fiddling with this may be beyond my ability atm */
+	/*vertical-align: middle;*/  /* Not quite right, but will do for now */
+/*}*/
 
+/* --- SEARCHING --- */
 .icd .image-tag-list-container {
 	position: relative;
 	align-self: flex-end;
